# Personal_AI_Employee_FTES

./: .gitignore  GEMINI.md  QWEN.md  README.md  setup.bat  token.json
.claude/: CLAUDE.md  settings.json
.linkedin_browser_data/Default/: DIPS
.obsidian/: workspace.json
.qwen/: settings.json
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.linkedin_browser_data/: Last Browser  Local State
AI_Employee_Vault/.obsidian/: app.json  appearance.json  workspace.json
AI_Employee_Vault/Active_Project/: TASK_email_review_20260515_012945.md  TASK_email_review_20260515_222100.md  TASK_email_review_20260515_222130.md  TASK_email_review_20260516_164905.md  TASK_email_review_20260516_164906.md  TASK_email_review_20260516_164936.md  TASK_email_review_20260516_193338.md  TASK_email_review_20260516_210302.md
AI_Employee_Vault/Briefings/: BRIEFING_weekly_ceo_2026-04-15.md
AI_Employee_Vault/Done/: 20260511_191803_test_approval.md  FILE_20260415_184221_weekly_briefing_request.md
AI_Employee_Vault/Inbox/: silver_tier_test.txt  weekly_briefing_request.txt
AI_Employee_Vault/Needs_Action/: EMAIL_19e26eaf988c307f.md  EMAIL_19e29e90475dd94f.md  EMAIL_19e2a5777cfd39cd.md  EMAIL_19e2ac4bf3939e05.md  (+7 more)
mcp-servers/: README.md  mcp-config.json
scripts/: linkedin_auth.py  linkedin_post.py  send_email.py  trigger_daily_briefing.py  trigger_linkedin_post.py
watchers/: base_watcher.py  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py  orchestrator.py  pyproject.toml  requirements.txt  setup.py  test_e2e.py
(+376 files in other folders)
